src/objects/FieloPLT__Transaction__c.object
<CustomObject>
    <description>Actions that grant Points, Badges or Rewards to Members in exchange of performing specific activities.</description>
    <fields>
        <fullName>CourseStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Status</label>
        <referenceTo>CourseStatus__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically generated related Action.</description>
        <inlineHelpText>Related Action.</inlineHelpText>
        <label>Action</label>
        <referenceTo>FieloPLT__Action__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Date__c</fullName>
        <defaultValue>now()</defaultValue>
        <description>Transaction date and time.</description>
        <inlineHelpText>Choose Transaction date and time.</inlineHelpText>
        <label>Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It shows the Event which generated the Transaction.</description>
        <inlineHelpText>Event which generated the Transaction.</inlineHelpText>
        <label>Event</label>
        <referenceTo>FieloPLT__Event__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsOffline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When ticked, Transaction is processed offline.</description>
        <inlineHelpText>When ticked, Transaction is processed offline.</inlineHelpText>
        <label>Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When ticked, Transactions were processed by the Rule Engine.</description>
        <inlineHelpText>When ticked, Transactions were processed.</inlineHelpText>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsReverted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When ticked, Transactions were reverted by the Rule Engine.</description>
        <inlineHelpText>When ticked, Transactions were reverted.</inlineHelpText>
        <label>Reverted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>It shows the Member who generated the Transaction.</description>
        <inlineHelpText>Enter the Member who generated the Transaction.</inlineHelpText>
        <label>Member</label>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__PointCost__c</fullName>
        <description>It shows the result of &quot;Points&quot; from a Transaction multiplied by the &quot;Point Cost&quot; established in &quot;Program&quot;.</description>
        <inlineHelpText>Result of Transaction &quot;Points&quot; multiplied by the &quot;Point Cost&quot; established in &quot;Program&quot;.</inlineHelpText>
        <label>Point Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Points__c</fullName>
        <description>Transaction Points.</description>
        <inlineHelpText>Enter the number of Transaction Points.</inlineHelpText>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RevertedTransaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It shows a Transaction that was reverted.</description>
        <inlineHelpText>Transaction that was reverted.</inlineHelpText>
        <label>Reverted Transaction</label>
        <referenceTo>FieloPLT__Transaction__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Reward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It shows the Reward related to a Transaction.</description>
        <inlineHelpText>Reward related to a Transaction.</inlineHelpText>
        <label>Reward</label>
        <referenceTo>FieloPLT__Reward__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__SkipEngine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When ticked, Rule Engine is skipped and Members obtain &quot;Points&quot; from Transactions. This field is automatically completed when a Reverted &quot;Transaction&quot; is chosen.</description>
        <inlineHelpText>When ticked, Rule Engine is skipped and Members automatically obtain &quot;Points&quot; from Transactions.</inlineHelpText>
        <label>Skip Engine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Type__c</fullName>
        <description>Different kind of Transactions which depend on their purpose: Adjustment, Challenge Reward, Expiration and Reversion</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Challenge Reward</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expiration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reversion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>It shows the Transaction purchase value.</description>
        <inlineHelpText>Enter Transaction purchase value.</inlineHelpText>
        <label>Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ModuleResponse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Module Response</label>
        <referenceTo>ModuleResponse__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Transaction</label>
    <nameField>
        <displayFormat>T-{0000000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>FieloPLT__ValidateDateTime</fullName>
        <active>true</active>
        <description>Transaction date and time must be valid.</description>
        <errorConditionFormula>ISNULL(FieloPLT__Date__c)</errorConditionFormula>
        <errorDisplayField>FieloPLT__Date__c</errorDisplayField>
        <errorMessage>Transaction date and time must be valid.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloPLT__ValidateMember</fullName>
        <active>true</active>
        <description>A Member must be selected.</description>
        <errorConditionFormula>(FieloPLT__Member__c == null)</errorConditionFormula>
        <errorDisplayField>FieloPLT__Member__c</errorDisplayField>
        <errorMessage>A Member must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloPLT__ValidateProcessedPoints</fullName>
        <active>true</active>
        <description>A processed Transaction cannot have null &quot;Points&quot;.</description>
        <errorConditionFormula>FieloPLT__IsProcessed__c &amp;&amp; ISNULL(FieloPLT__Points__c)</errorConditionFormula>
        <errorDisplayField>FieloPLT__Points__c</errorDisplayField>
        <errorMessage>A processed Transaction cannot have null &quot;Points&quot;.</errorMessage>
    </validationRules>
</CustomObject>